--- a/index.html
+++ b/index.html
@@ -382,6 +382,67 @@
                 >
               </div>
             </li>
+            <li>
+              <div class="o-hidden">
+                <div class="link cursor-pointer dmenu">
+                  <span class="fill-text" data-text="Services">Services</span>
+                  <i></i>
+                </div>
+              </div>
+              <div class="sub-menu">
+                <ul>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/web_dev/index.html"
+                      class="sub-link"
+                      >Web Development</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/smm/index.html"
+                      class="sub-link"
+                      >SMM</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/seo/index.html"
+                      class="sub-link"
+                      >SEO</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/meta_ads/index.html"
+                      class="sub-link"
+                      >Facebook Ads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/google_ads/index.html"
+                      class="sub-link"
+                      >Google Ads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/email_marketing/index.html"
+                      class="sub-link"
+                      >Email marketing</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/designs/index.html"
+                      class="sub-link"
+                      >UI/UX and Graphics</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
 
             <li>
               <div class="o-hidden">
@@ -1546,9 +1607,49 @@
                     </div>
                     <div class="col-md-6">
                       <div class="item mb-60">
-                        <h6>Open Position</h6>
-                        <p>Senior Front-end Wordpress Developer (Remote)</p>
-                        <p>UI/UX Designer (Remote)</p>
+                        <h6>Our Services</h6>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/web_dev/index.html"
+                            >Web Development</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/smm/index.html"
+                            >SMM</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/seo/index.html"
+                            >SEO</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/meta_ads/index.html"
+                            >Facebook Ads</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/google_ads/index.html"
+                            >Google Ads</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/email_marketing/index.html"
+                            >Email Marketing</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/designs/index.html"
+                            >UI/UX and Graphics</a
+                          >
+                        </p>
                       </div>
                     </div>
                     <div class="col-md-6">
