designs page menus

--- a/services/designs/index.html
+++ b/services/designs/index.html
@@ -137,6 +137,13 @@
               <a class="nav-link active" href="#">Home</a>
             </li>
             <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://1drv.ms/b/c/f23709bddb7ed08a/EUBBw4xHDVBKjSRGXLBc38kBcefUa_8BneHpFWC65rF6tw?e=XUEnnH"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://tally.so/r/nWKkvQ"
                 >Contact Us</a
               >
@@ -183,6 +190,79 @@
                 <div class="link cursor-pointer dmenu">
                   <span class="fill-text" data-text="Home">Home</span>
                 </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="o-hidden">
+                <a
+                  href="https://1drv.ms/b/c/f23709bddb7ed08a/EUBBw4xHDVBKjSRGXLBc38kBcefUa_8BneHpFWC65rF6tw?e=XUEnnH"
+                  class="link"
+                  ><span class="fill-text" data-text="Portfolio"
+                    >Portfolio</span
+                  ></a
+                >
+              </div>
+            </li>
+            <li>
+              <div class="o-hidden">
+                <div class="link cursor-pointer dmenu">
+                  <span class="fill-text" data-text="Services">Services</span>
+                  <i></i>
+                </div>
+              </div>
+              <div class="sub-menu">
+                <ul>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/web_dev/index.html"
+                      class="sub-link"
+                      >Web Development</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/smm/index.html"
+                      class="sub-link"
+                      >SMM</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/seo/index.html"
+                      class="sub-link"
+                      >SEO</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/meta_ads/index.html"
+                      class="sub-link"
+                      >Facebook Ads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/google_ads/index.html"
+                      class="sub-link"
+                      >Google Ads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/email_marketing/index.html"
+                      class="sub-link"
+                      >Email marketing</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/designs/index.html"
+                      class="sub-link"
+                      >UI/UX and Graphics</a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -909,7 +989,7 @@
                           </h5>
                         </div>
                         <div class="mt-30">
-                          <h6>
+                          <h6 style="font-size: 15px;">
                             Thanks to the team's creative approach, we launched a fresh, bold brand identity that completely reshaped our market image.  
                             Excellent communication and outstanding design work from start to finish.
                           </h6>
@@ -946,7 +1026,7 @@
                           </h5>
                         </div>
                         <div class="mt-30">
-                          <h6>
+                          <h6 style="font-size: 15px;">
                             We entrusted the team with our full rebranding project, including a website redesign.  
                             The results were spectacular — clean visuals, intuitive UX, and a significant increase in customer engagement.
                           </h6>
@@ -983,7 +1063,7 @@
                           </h5>
                         </div>
                         <div class="mt-30">
-                          <h6>
+                          <h6 style="font-size: 15px;">
                             A reliable creative partner! Every graphic design, social media visual, and marketing asset delivered was not only stunning but aligned perfectly with our brand strategy.
                           </h6>
                         </div>
@@ -1148,242 +1228,11 @@
                   </div>
                 </div>
               </div>
-              <div class="text-center mt-80">
-                <a
-                  href="../inner_pages/about.html"
-                  class="butn butn-md butn-bord butn-rounded"
-                >
-                  <div class="d-flex align-items-center">
-                    <span>Show More</span>
-                    <span class="icon pe-7s-angle-right ml-10 fz-30"></span>
-                  </div>
-                </a>
-              </div>
             </div>
           </section>
 
           <!-- ==================== End Awards ==================== -->
 
-          <!-- ==================== Start Blog ==================== -->
-
-          <section class="blog-sa">
-            <div class="container section-padding bord-thin-top-light">
-              <div class="sec-head mb-100">
-                <div class="row">
-                  <div class="col-lg-5">
-                    <h6 class="sub-head">Latest Articles</h6>
-                  </div>
-                  <div class="col-lg-7">
-                    <h4>
-                      The place that we share everything related to
-                      <span class="sub-color inline"
-                        >design trends, tips and more.</span
-                      >
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="item md-mb50">
-                    <div class="img fit-img">
-                      <img src="assets/imgs/blog/1.jpg" alt="" />
-                    </div>
-                    <div class="cont mt-30">
-                      <h6>
-                        <a href="../inner_pages/blog-details.html"
-                          >Hubfolio agency revolutionizes work with the
-                          power of AI-Driven</a
-                        >
-                      </h6>
-                      <div class="info d-flex align-items-center mt-20">
-                        <a href="#0" class="tag">
-                          <span>Design Trends</span>
-                        </a>
-                        <a href="#0" class="date">
-                          <span>/ May 15, 2024</span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="item">
-                    <div class="img fit-img">
-                      <img src="assets/imgs/blog/2.jpg" alt="" />
-                    </div>
-                    <div class="cont mt-30">
-                      <h6>
-                        <a href="../inner_pages/blog-details.html"
-                          >Common UX painpoints in Dashboard-related
-                          projects</a
-                        >
-                      </h6>
-                      <div class="info d-flex align-items-center mt-20">
-                        <a href="#0" class="tag">
-                          <span>Experience</span>
-                        </a>
-                        <a href="#0" class="date">
-                          <span>/ May 15, 2024</span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <!-- ==================== End Blog ==================== -->
-
-          <!-- ==================== Start Contact ==================== -->
-
-          <section class="contact-sa section-padding pt-0">
-            <div class="container">
-              <div class="box">
-                <div class="row">
-                  <div class="col-lg-4">
-                    <div class="info">
-                      <div class="sec-head">
-                        <h4>
-                          Success is a team play, right?
-                          <span class="sub-color inline"
-                            >Let’s work together!</span
-                          >
-                        </h4>
-                      </div>
-                      <div class="mt-50 md-mb80">
-                        <h6>+48 518 922 121</h6>
-                        <span class="d-block sub-color fz-14 mt-10"
-                          >Call us for urgent</span
-                        >
-                        <a
-                          href="https://tally.so/r/nWKkvQ"
-                          class="butn butn-md butn-bord butn-rounded mt-50"
-                        >
-                          <div class="d-flex align-items-center">
-                            <span>Get consultation</span>
-                            <span class="icon invert ml-10">
-                              <img
-                                src="../common/imgs/icons/arrow-top-right.svg"
-                                alt=""
-                              />
-                            </span>
-                          </div>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-7 offset-lg-1">
-                    <div class="contact-form">
-                      <form
-                        id="contact-form"
-                        method="post"
-                        action="contact.php"
-                      >
-                        <div class="messages"></div>
-
-                        <div class="controls row">
-                          <div class="col-lg-6">
-                            <div class="form-group mb-30">
-                              <label for="form_name"
-                                >Full Name <span class="star">*</span></label
-                              >
-                              <input
-                                id="form_name"
-                                type="text"
-                                name="name"
-                                placeholder="Your full name"
-                                required="required"
-                              />
-                            </div>
-                          </div>
-
-                          <div class="col-lg-6">
-                            <div class="form-group mb-30">
-                              <label for="form_email"
-                                >Email Address
-                                <span class="star">*</span></label
-                              >
-                              <input
-                                id="form_email"
-                                type="email"
-                                name="email"
-                                placeholder="Your email address"
-                                required="required"
-                              />
-                            </div>
-                          </div>
-
-                          <div class="col-lg-6">
-                            <div class="form-group mb-30">
-                              <label for="form_subject"
-                                >Subject <span class="star">*</span></label
-                              >
-                              <input
-                                id="form_subject"
-                                type="text"
-                                name="subject"
-                                placeholder="subject"
-                                required="required"
-                              />
-                            </div>
-                          </div>
-
-                          <div class="col-lg-6">
-                            <div class="form-group mb-30">
-                              <label for="form_budget"
-                                >Your Budget
-                                <span class="opt sub-color"
-                                  >(Optional)</span
-                                ></label
-                              >
-                              <input
-                                id="form_budget"
-                                type="text"
-                                name="budget"
-                                placeholder="A range of budget for project"
-                                required="required"
-                              />
-                            </div>
-                          </div>
-
-                          <div class="col-12">
-                            <div class="form-group">
-                              <label for="form_message">Message</label>
-                              <textarea
-                                id="form_message"
-                                name="message"
-                                placeholder="Write your message here..."
-                                rows="4"
-                                required="required"
-                              ></textarea>
-                            </div>
-                            <div class="mt-60">
-                              <button
-                                type="submit"
-                                class="butn butn-md butn-bord butn-rounded"
-                              >
-                                <span class="text">Send Your Message</span>
-                                <span class="icon invert ml-10">
-                                  <img
-                                    src="../common/imgs/icons/arrow-top-right.svg"
-                                    alt=""
-                                  />
-                                </span>
-                              </button>
-                            </div>
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <!-- ==================== End Contact ==================== -->
         </main>
 
         <!-- ==================== Start Footer ==================== -->
