test cookies block for facebook pixel

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <!-- Plugins -->
     <link rel="stylesheet" href="common/css/plugins.css" />
 
-    <script
+    <!-- <script
       id="usercentrics-cmp"
       src="https://web.cmp.usercentrics.eu/ui/loader.js"
       data-settings-id="6bY37gq9_HmNiR"
       async
-    ></script>
+    ></script> -->
 
     <!-- Core Style Css -->
     <link rel="stylesheet" href="common/css/common_style.css" />
